Add initial anonymization functionality

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+spring.datasource.url=${JDBC_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 
+spring.main.banner-mode=off
+
+logging.level.org.apache=INFO
